--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_slidable: ^3.1.1
   intl: ^0.19.0
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
